# aws-robomaker-sample-application-objecttracker

./: .travis.yml  CONTRIBUTING.md  Makefile  NOTICE  README.md  github_deploy.pem.enc  roboMakerSettings.json
robot_ws/: .rosinstall
robot_ws/src/object_tracker_robot/: CMakeLists.txt  package.xml
robot_ws/src/object_tracker_robot/config/: model_config.yaml
robot_ws/src/object_tracker_robot/launch/: main.launch  main.launch.py
robot_ws/src/object_tracker_robot/scripts/: download_model.py  run_turtlebot_controller.sh
robot_ws/src/turtlebot_controller/: package.xml  setup.cfg  setup.py
robot_ws/src/turtlebot_controller/robomaker/: inference_worker.py
simulation_ws/: .rosinstall
simulation_ws/src/object_tracker_simulation/: package.xml  setup.cfg  setup.py
simulation_ws/src/object_tracker_simulation/launch/: create_world.launch  create_world.launch.py  distributed_training.launch  distributed_training.launch.py  evaluation.launch  evaluation.launch.py  local_training.launch  local_training.launch.py
simulation_ws/src/object_tracker_simulation/worlds/: empty.world
simulation_ws/src/sagemaker_rl_agent/: setup.py
simulation_ws/src/sagemaker_rl_agent/markov/: single_machine_training_worker.py
simulation_ws/src/sagemaker_rl_agent/markov/environments/: object_tracker_env.py
simulation_ws/src/sagemaker_rl_agent/markov/presets/: turtlebot3_object_tracker_and_follower.py
simulation_ws/src/turtlebot3_description_reduced_mesh/: CMakeLists.txt  package.xml
simulation_ws/src/turtlebot3_description_reduced_mesh/launch/: spawn_turtlebot.launch.py  turtlebot3_state_publisher.launch.py  turtlebot3_waffle_pi_and_burger.launch.py  turtlebot3_waffle_pi_and_burger_state_publisher.launch.py
simulation_ws/src/turtlebot3_description_reduced_mesh/models/turtlebot3_burger/: model.sdf
simulation_ws/src/turtlebot3_description_reduced_mesh/models/turtlebot3_waffle_pi/: model.sdf
simulation_ws/src/turtlebot3_description_reduced_mesh/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf
simulation_ws/src/turtlebot3_description_reduced_mesh/worlds/: turtlebot3_waffle_pi_and_burger.model
simulation_ws/src/turtlebot3_simulation_description/: CMakeLists.txt  package.xml
simulation_ws/src/turtlebot3_simulation_description/launch/: turtlebot3_waffle_pi_and_burger.launch.py  turtlebot3_waffle_pi_and_burger_state_publisher.launch.py
simulation_ws/src/turtlebot3_simulation_description/worlds/empty_worlds/: turtlebot3_waffle_pi_and_burger.model
