<?xml version="1.0"?>
<package format="3">
  <name>object_tracker_robot</name>
  <version>0.1.1</version>
  <description>
    Deployment package for the Object Tracker RoboMaker sample application on the Turtlebot3
  </description>
  
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <depend>python-boto3-pip</depend>
  <depend>python-yaml</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>libjpeg62</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
