<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_controller</name>
  <version>0.1.1</version>
  <description>
    Deployment package for the Object Tracker RoboMaker sample application on the Turtlebot3
  </description>
  
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <depend>python3-boto3</depend>
  <depend>python3-yaml</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
