<?xml version="1.0"?>
<package format="3">
  <name>object_tracker_simulation</name>
  <version>1.2.0</version>
  <description>
    Trains a TurtleBot to track an object using reinforcement learning.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>ament_package</buildtool_depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3</depend>
  <depend>xacro</depend>
  <depend>launch</depend>

  <exec_depend>gazebo</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>turtlebot3_description_reduced_mesh</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>

</package>
